# solar-2d

./: .gitignore  Cargo.toml  README.md  index.html
.github/actions/: deploy_page.yaml
.github/workflows/: deploy_page.yaml
docs/: index.html  solar-2d-1c8b9986a1a545de.js  solar-2d-46ec849e7da26777.js  solar-2d-70e84a933a965eac.js  solar-2d-a590ffbcd286e8b3.js  solar-2d-fd928fab393df78f.js
docs/assets/: config.yaml
docs/assets/config/: planets.yaml
src/: main.rs
src/bundels/: stellar.rs
src/components/: camera.rs  mod.rs  planet.rs  stellar.rs  timetolive.rs  velocity.rs
src/entities/: mod.rs  stellar.rs
src/models/: config.rs  mod.rs  planet_config.rs
src/objects/: mod.rs  stellar.rs
src/plugins/: mod.rs  physics.rs  render.rs
src/resources/: assets.rs  camera.rs  mod.rs  render.rs
